# myapp-poetry-tox

./: .gitignore  pyproject.toml  tox.ini
src/app/: cli.py
tests/: test_cli.py  test_now.py
