[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.coverage.report]
exclude_lines = [
  "def __repr__",
  "if 0:",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "nocov",
  "pass",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError"
]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
omit = [
  "tests/*"
]

[tool.isort]
combine_as_imports = "true"
force_grid_wrap = 0
include_trailing_comma = "true"
known_first_party = "src"
line_length = 120
multi_line_output = 3

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
mypy_path = "src.app"
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[tool.poetry]
authors = ["ScottWombat <scottwombat@gmail.com>"]
description = ""
name = "app"
packages = [{from = "src", include = "app"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
black = "23.1.0"
coverage = "7.1.0"
isort = "5.12.0"
mypy = "1.0.0"
pytest = "7.2.1"
pytest-cov = "^4.0.0"
toml-sort = "0.22.3"
tox = "4.4.5"

[tool.poetry.group.dev.dependencies]
mypy = {extras = ["all"], version = "^1.0.0"}
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
run_command = "app.cli:app"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report term-missing --cov-report html:htmlcov --cov-report xml --no-cov-on-fail"
pythonpath = "src"
testpaths = [
  "tests"
]
